--- a/index.css
+++ b/index.css
@@ -39,5 +39,19 @@ body{
 }
 
 .netflix span:nth-child(3){
+ background: #b00e12;
+ right: 0;
+}
 
+h3{
+    position: relative;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 60px;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    overflow: hidden;
 }
