--- a/index.css
+++ b/index.css
@@ -55,3 +55,17 @@ h3{
     letter-spacing: 10px;
     overflow: hidden;
 }
+
+.netflix::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -100px;
+    width: 100%;
+    height: 120px;
+    background: #000;
+    z-index: 2;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%;
+    transform: scalex(1.5);
+}
